## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -lm\
	 -Wall\
	 -g

bin_PROGRAMS = step

step_SOURCES =  \
	main.c \
	fileman.c \
	fileman.h \
	stackman.c \
	stackman.h \
	mathman.c \
	mathman.h \
	stepman.c \
	stepman.h

step_LDFLAGS = 

step_LDADD = 

